# osint-prototype

./: .gitignore  README.md  app.py  engine_wrapper.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
adapters/: base.py  google_search_adapter.py  opencorporates_adapter.py  technical_adapter.py
core/: models.py
reporting/: generator.py
reports/: bill_gates_osint_report_20260416_200802.md  travis_haasch”_ceo_of_aigeeks_osint_report_20260416_153815.md
src/adapters/: __init__.py  base.py  google_search_adapter.py  opencorporates_adapter.py  technical_adapter.py
src/core/: __init__.py  analyzer.py  engine.py  models.py
